<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/connection_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/status_disconnected"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <Spinner
        android:id="@+id/select_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_weight="2" />

    <Button
        android:id="@+id/manage_discovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorBtManager"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:paddingLeft="120dip"
        android:paddingRight="130dip"
        android:text="@string/start_discovery"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:orientation="horizontal">

        <Button
            android:id="@+id/click_left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/click_left" />

        <Button
            android:id="@+id/click_right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/click_right" />


    </LinearLayout>

    <Button
        android:id="@+id/manage_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorBtManager"
        android:text="@string/open_connection"
        android:textColor="#FFFFFF" />

</LinearLayout>